Revision 4.1.16a
----------------

- Extended Security Options (3DESEDE, AES192, AES256) privacy
  protocols implemented.
- The error-indication codes moved from literals to objects for reliability
  and clarity
- Fix to v1.TrapPDUAPI.getVarBinds() to address PDU component at the right
  position.
- Fix to rfc1902.Bits initialization from named bits sequence.
- Internal caches structure improved.
- Sync versions of oneliner apps split off async implementation for clarity.
- Randomize initial in various numeric sequences.
- MsgAndPduDsp expectResponse parameters passing reworked.
- GetNext/GetBulk response processing logic moved to getNextVarBinds()
- Changes towards performance improvement:
  + all dict.has_key() & dict.get() invocations replaced with modern syntax
    (this breaks compatibility with Python 2.1 and older).
  + introduce the MibInstrumControlle.readVarsFast() method (which skips
    the "testing" phase of MIB value readin) for dealing with internal
    configuration (LCD).
  + default debug.logger is now just a zero value instead of an object
    what saves big on frequent calls
  + SNMPv2-SMI columnar indices <-> index values convertion code optimized.
  + pre-compute and re-use some of ASN.1 structures.
  + avoid setting PDU defaults to save on unnecessary initialization.
  + skip ASN.1 types verification where possible.
  + at oneliner Command Generator, avoid looking up pure OID arguments
    at MIB as it's pointless but takes time.
  + cache MIB columnar objects instance ID <-> symbolic index representation
    mapping

Revision 4.1.15a
----------------

- SNMP Proxy example added.
- End-of-MIB condition detection reworked what caused backward
  incompatibility at v1arch GETNEXT API. Previous pysnmp versions
  used value = None in var-binds as returned by getVarBindTable()
  API method. This version uses rfc1905 exception values (v2c/v3)
  or pyasn1 Null (v1).
  Built-in GETNEXT/GETBULK apps now do not require user to track